Remove NMS dependency Fix reload bug with armour stands Remove plugin annotations