@@ -1,13 +1,10 @@
 package com.jamesdpeters.minecraft.chests.serialize;
 
-import com.jamesdpeters.minecraft.chests.api.ApiSpecific;
-import com.jamesdpeters.minecraft.chests.crafting.Crafting;
 import org.bukkit.Bukkit;
 import org.bukkit.Keyed;
 import org.bukkit.NamespacedKey;
 import org.bukkit.configuration.serialization.ConfigurationSerializable;
 import org.bukkit.configuration.serialization.SerializableAs;
-import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.Recipe;
 import org.bukkit.inventory.ShapedRecipe;
@@ -47,12 +44,12 @@ public class RecipeSerializable implements ConfigurationSerializable {
 
         //noinspection deprecation
         namespacedKey = new NamespacedKey((String) map.get("namespace"), (String) map.get("key"));
-        recipe = Crafting.getRecipeByKey(namespacedKey);
+        recipe = Bukkit.getRecipe(namespacedKey);
     }
 
-    public void updateRecipe(Player player) {
+    public void updateRecipe() {
         if (recipe == null) {
-            recipe = ApiSpecific.getNmsProvider().getCraftingProvider().getRecipe(player, Bukkit.getWorlds().get(0), items);
+            recipe = Bukkit.getCraftingRecipe(items, Bukkit.getWorlds().getFirst());
         }
     }
 
